// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`@startupjs/babel-plugin-rn-stylename-to-style ::part() in pug loop: ::part() in pug loop 1`] = `

import { pug } from 'cssxjs'
import './index.styl'
function Test ({ items, ...props }) {
  return pug\`
    Card(
      part='root'
      style={ color: 'blue' }
    )
      each item in items
        Content(part='item')= item
  \`
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
function Test({ itemStyle: _itemStyle, style: _style, items, ...props }) {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  return (
    <Card
      {..._cssx("", _file__css, _global, _local, {
        style: [
          {
            color: "blue",
          },
          _style,
        ],
      })}
    >
      {(() => {
        const __pugEachResult = [];
        for (const item of items) {
          __pugEachResult.push(
            <Content
              {..._cssx("", _file__css, _global, _local, {
                style: _itemStyle,
              })}
            >
              {item}
            </Content>
          );
        }
        return __pugEachResult;
      })()}
    </Card>
  );
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style Arrays and objects: Arrays and objects 1`] = `

import './index.styl'
function Test ({ style, active, submit, disabled }) {
  const titleStyle = { color: 'red', fontWeight: 'bold' }
  return (
    <div style={style} styleName={['root', {active}]}>
      <span styleName={['title']} style={titleStyle}>Title</span>
      <span styleName={['description']} style={{ color: 'green' }}>Description</span>
      <button style={{ color: 'pink' }} styleName={{submit, disabled}}>Submit</button>
    </div>
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
function Test({ style, active, submit, disabled }) {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  const titleStyle = {
    color: "red",
    fontWeight: "bold",
  };
  return (
    <div
      {..._cssx(
        [
          "root",
          {
            active,
          },
        ],
        _file__css,
        _global,
        _local,
        {
          style: style,
        }
      )}
    >
      <span
        {..._cssx(["title"], _file__css, _global, _local, {
          style: titleStyle,
        })}
      >
        Title
      </span>
      <span
        {..._cssx(["description"], _file__css, _global, _local, {
          style: {
            color: "green",
          },
        })}
      >
        Description
      </span>
      <button
        {..._cssx(
          {
            submit,
            disabled,
          },
          _file__css,
          _global,
          _local,
          {
            style: {
              color: "pink",
            },
          }
        )}
      >
        Submit
      </button>
    </div>
  );
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style DEPRECATED! Legacy CJS version when "useImport: false".: DEPRECATED! Legacy CJS version when "useImport: false". 1`] = `

import './index.styl'
function Test () {
  return (
    <div styleName='root active'>
      <span styleName='title'>Title</span>
      <span styleName='description'>Description</span>
      <button styleName='submit disabled'>Submit</button>
    </div>
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
function Test() {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  return (
    <div {..._cssx("root active", _file__css, _global, _local, {})}>
      <span {..._cssx("title", _file__css, _global, _local, {})}>Title</span>
      <span {..._cssx("description", _file__css, _global, _local, {})}>
        Description
      </span>
      <button {..._cssx("submit disabled", _file__css, _global, _local, {})}>
        Submit
      </button>
    </div>
  );
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style DEPRECATED! With ::part() styles and deprecated *StyleName props: DEPRECATED! With ::part() styles and deprecated *StyleName props 1`] = `

import './index.styl'
function Test ({ style, active, submit, disabled, titleStyle }) {
  return (
    <Card style={style} styleName={['root', {active}]} titleStyleName={['title', {active}]} titleStyle={[titleStyle, { color: 'green' }]} title='container'>
      <Content styleName='text' style={{ color: 'red' }} footerStyleName='footer' footerStyle={{ color: 'blue' }} center title='text' />
    </Card>
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
function Test({ style, active, submit, disabled, titleStyle }) {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  return (
    <Card
      titleStyle={[
        _cssx(
          [
            "title",
            {
              active,
            },
          ],
          _file__css
        ),
        [
          titleStyle,
          {
            color: "green",
          },
        ],
      ]}
      title="container"
      {..._cssx(
        [
          "root",
          {
            active,
          },
        ],
        _file__css,
        _global,
        _local,
        {
          style: style,
        }
      )}
    >
      <Content
        footerStyle={[
          _cssx("footer", _file__css),
          {
            color: "blue",
          },
        ]}
        center
        title="text"
        {..._cssx("text", _file__css, _global, _local, {
          style: {
            color: "red",
          },
        })}
      />
    </Card>
  );
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style Failed test 1: Failed test 1 1`] = `

import { observer, useBackPress } from 'startupjs'

function Layout ({ style, children }) {
  return (
    <SafeAreaView styleName='root' style={style}>
      <StatusBar
        backgroundColor={bgColor}
        barStyle='dark-content'
      >
        {children}
      </StatusBar>
    </SafeAreaView>
  )
}

export default observer(Layout)

      ↓ ↓ ↓ ↓ ↓ ↓

import { observer, useBackPress } from "startupjs";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime/teamplay";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
function Layout({ style, children }) {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  return (
    <SafeAreaView
      {..._cssx("root", {}, _global, _local, {
        style: style,
      })}
    >
      <StatusBar backgroundColor={bgColor} barStyle="dark-content">
        {children}
      </StatusBar>
    </SafeAreaView>
  );
}
export default observer(Layout);


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style Failed test 2: Failed test 2 1`] = `

import { observer, useBackPress } from 'startupjs'

function Menu ({ style, children, value, variant, activeBorder, iconPosition, activeColor, ...props }) {
  return (
    <Context.Provider value={value}>
      <Div style={style} />
      <Div
        style={style}
        styleName={['root', [variant]]}
        {...props}
      >{children}</Div>
    </Context.Provider>
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { observer, useBackPress } from "startupjs";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime/teamplay";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
function Menu({
  style,
  children,
  value,
  variant,
  activeBorder,
  iconPosition,
  activeColor,
  ...props
}) {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  return (
    <Context.Provider value={value}>
      <Div
        {..._cssx("", {}, _global, _local, {
          style: style,
        })}
      />
      <Div
        {...props}
        {..._cssx(["root", [variant]], {}, _global, _local, {
          style: style,
        })}
      >
        {children}
      </Div>
    </Context.Provider>
  );
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style Find proper react component. First capital letter function must be returned: Find proper react component. First capital letter function must be returned 1`] = `

import './index.styl'
export default function ComponentFactory (title) {
  return function Component () {
    function renderItem () {
      return <Span part='item'>{title}</Span>
    }
    const renderFooter = () => <Div part='footer' />
    return <Div part='root'>{renderItem()}{renderFooter()}</Div>
  }
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
export default function ComponentFactory(title) {
  return function Component(_props) {
    const _local = _cssxLayer(
      typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
    );
    const _global = _cssxLayer(
      typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
    );
    const _file__css = _cssxLayer(_css);
    function renderItem() {
      return (
        <Span
          {..._cssx("", _file__css, _global, _local, {
            style: _props.itemStyle,
          })}
        >
          {title}
        </Span>
      );
    }
    const renderFooter = () => (
      <Div
        {..._cssx("", _file__css, _global, _local, {
          style: _props.footerStyle,
        })}
      />
    );
    return (
      <Div
        {..._cssx("", _file__css, _global, _local, {
          style: _props.style,
        })}
      >
        {renderItem()}
        {renderFooter()}
      </Div>
    );
  };
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style Find proper react component. Simplest: Find proper react component. Simplest 1`] = `

import './index.styl'
export default function Test () {
  return <Div part='root' />
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
export default function Test(_props) {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  return (
    <Div
      {..._cssx("", _file__css, _global, _local, {
        style: _props.style,
      })}
    />
  );
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style Find proper react component. With arrow and wrapped into arrow function: Find proper react component. With arrow and wrapped into arrow function 1`] = `

import './index.styl'
export const Test = () => {
  const renderItem = () => {
    return <Div part='item' />
  }
  return <Div part='root'>{renderItem()}</Div>
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
export const Test = (_props) => {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  const renderItem = () => {
    return (
      <Div
        {..._cssx("", _file__css, _global, _local, {
          style: _props.itemStyle,
        })}
      />
    );
  };
  return (
    <Div
      {..._cssx("", _file__css, _global, _local, {
        style: _props.style,
      })}
    >
      {renderItem()}
    </Div>
  );
};


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style Find proper react component. With arrow and wrapped into named function: Find proper react component. With arrow and wrapped into named function 1`] = `

import './index.styl'
export const Test = () => {
  function renderItem () {
    return <Div part='item' />
  }
  return <Div part='root'>{renderItem()}</Div>
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
export const Test = (_props) => {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  function renderItem() {
    return (
      <Div
        {..._cssx("", _file__css, _global, _local, {
          style: _props.itemStyle,
        })}
      />
    );
  }
  return (
    <Div
      {..._cssx("", _file__css, _global, _local, {
        style: _props.style,
      })}
    >
      {renderItem()}
    </Div>
  );
};


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style Find proper react component. With const and anonymous: Find proper react component. With const and anonymous 1`] = `

import './index.styl'
export const Test = function () {
  return <Div part='root' />
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
export const Test = function (_props) {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  return (
    <Div
      {..._cssx("", _file__css, _global, _local, {
        style: _props.style,
      })}
    />
  );
};


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style Find proper react component. With const and arrow: Find proper react component. With const and arrow 1`] = `

import './index.styl'
export const Test = () => {
  return <Div part='root' />
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
export const Test = (_props) => {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  return (
    <Div
      {..._cssx("", _file__css, _global, _local, {
        style: _props.style,
      })}
    />
  );
};


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style Local css interpolation after hook: Local css interpolation after hook 1`] = `

import { useThemeColor } from './theme'
import { View } from 'react-native'

function Card ({ ready, pad }) {
  const color = useThemeColor('primary')
  const __CSS_LOCAL__ = {
    sheet: _localCssInstance,
    values: [color, pad]
  }
  if (!ready) return <Loader styleName='loader' />
  return <View styleName='root' />
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { useThemeColor } from "./theme";
import { View } from "react-native";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
function Card({ ready, pad }) {
  const color = useThemeColor("primary");
  const __CSS_LOCAL__ = {
    sheet: _localCssInstance,
    values: [color, pad],
  };
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  if (!ready) return <Loader {..._cssx("loader", {}, _global, _local, {})} />;
  return <View {..._cssx("root", {}, _global, _local, {})} />;
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style No styles file: No styles file 1`] = `

function Test () {
  return <div styleName='root' />
}

      ↓ ↓ ↓ ↓ ↓ ↓

import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
function Test() {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  return <div {..._cssx("root", {}, _global, _local, {})} />;
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style Options. Cache Teamplay: Options. Cache Teamplay 1`] = `

import './index.styl'
function Test () {
  return (
    <div styleName='root' />
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime/teamplay";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
function Test() {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  return <div {..._cssx("root", _file__css, _global, _local, {})} />;
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style Options. Platform React Native and Cache Teamplay: Options. Platform React Native and Cache Teamplay 1`] = `

import './index.styl'
function Test () {
  return (
    <div styleName='root' />
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime/react-native-teamplay";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
function Test() {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  return <div {..._cssx("root", _file__css, _global, _local, {})} />;
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style Options. Platform React Native: Options. Platform React Native 1`] = `

import './index.styl'
function Test () {
  return (
    <div styleName='root' />
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime/react-native";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
function Test() {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  return <div {..._cssx("root", _file__css, _global, _local, {})} />;
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style Options. Platform Web: Options. Platform Web 1`] = `

import './index.styl'
function Test () {
  return (
    <div styleName='root' />
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime/web";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
function Test() {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  return <div {..._cssx("root", _file__css, _global, _local, {})} />;
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style Provider style props are CSSX provider input, not RN style: Provider style props are CSSX provider input, not RN style 1`] = `

import { observer, CssxProvider, StartupjsProvider } from 'startupjs'
export default observer(function Test ({ style }) {
  return (
    <StartupjsProvider style={style}>
      <CssxProvider style={[baseTheme, style]}>
        <div style={{ backgroundColor: 'red' }} />
      </CssxProvider>
    </StartupjsProvider>
  )
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { observer, CssxProvider, StartupjsProvider } from "startupjs";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime/teamplay";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
export default observer(function Test({ style }) {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  return (
    <StartupjsProvider style={style}>
      <CssxProvider style={[baseTheme, style]}>
        <div
          {..._cssx("", {}, _global, _local, {
            style: {
              backgroundColor: "red",
            },
          })}
        />
      </CssxProvider>
    </StartupjsProvider>
  );
});


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style Puts compiled attribute to the end of attributes list: Puts compiled attribute to the end of attributes list 1`] = `

import './index.styl'
function Test ({ style, active, submit, disabled }) {
  return (
    <div style={style} styleName={['root', {active}]} title='container'>
      <span styleName='text' style={{ color: 'red' }} center title='text' />
    </div>
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
function Test({ style, active, submit, disabled }) {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  return (
    <div
      title="container"
      {..._cssx(
        [
          "root",
          {
            active,
          },
        ],
        _file__css,
        _global,
        _local,
        {
          style: style,
        }
      )}
    >
      <span
        center
        title="text"
        {..._cssx("text", _file__css, _global, _local, {
          style: {
            color: "red",
          },
        })}
      />
    </div>
  );
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style Regular string with existing style: Regular string with existing style 1`] = `

import './index.styl'
function Test ({ style }) {
  const titleStyle = { color: 'red', fontWeight: 'bold' }
  return (
    <div style={[style, { backgroundColor: 'black' }]} styleName='root active'>
      <span styleName='title' style={titleStyle}>Title</span>
      <span styleName='description' style={{ color: 'green' }}>Description</span>
      <button styleName='submit disabled'>Submit</button>
    </div>
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
function Test({ style }) {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  const titleStyle = {
    color: "red",
    fontWeight: "bold",
  };
  return (
    <div
      {..._cssx("root active", _file__css, _global, _local, {
        style: [
          style,
          {
            backgroundColor: "black",
          },
        ],
      })}
    >
      <span
        {..._cssx("title", _file__css, _global, _local, {
          style: titleStyle,
        })}
      >
        Title
      </span>
      <span
        {..._cssx("description", _file__css, _global, _local, {
          style: {
            color: "green",
          },
        })}
      >
        Description
      </span>
      <button {..._cssx("submit disabled", _file__css, _global, _local, {})}>
        Submit
      </button>
    </div>
  );
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style Regular string: Regular string 1`] = `

import './index.styl'
function Test () {
  return (
    <div styleName='root active'>
      <span styleName='title'>Title</span>
      <span styleName='description'>Description</span>
      <button styleName='submit disabled'>Submit</button>
    </div>
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
function Test() {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  return (
    <div {..._cssx("root active", _file__css, _global, _local, {})}>
      <span {..._cssx("title", _file__css, _global, _local, {})}>Title</span>
      <span {..._cssx("description", _file__css, _global, _local, {})}>
        Description
      </span>
      <button {..._cssx("submit disabled", _file__css, _global, _local, {})}>
        Submit
      </button>
    </div>
  );
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style Style with observer. Should transform for caching: Style with observer. Should transform for caching 1`] = `

import { observer } from 'startupjs'
export default observer(function Test () {
  return (
    <div style={{ backgroundColor: 'red' }}>
      <div style={{ color: 'green' }} titleStyle={{ color: 'blue' }} />
      <div>
        <span headerStyle={{ color: 'yellow' }}>Hello</span>
      </div>
    </div>
  )
})

      ↓ ↓ ↓ ↓ ↓ ↓

import { observer } from "startupjs";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime/teamplay";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
export default observer(function Test() {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  return (
    <div
      {..._cssx("", {}, _global, _local, {
        style: {
          backgroundColor: "red",
        },
      })}
    >
      <div
        {..._cssx("", {}, _global, _local, {
          style: {
            color: "green",
          },
          titleStyle: {
            color: "blue",
          },
        })}
      />
      <div>
        <span
          {..._cssx("", {}, _global, _local, {
            headerStyle: {
              color: "yellow",
            },
          })}
        >
          Hello
        </span>
      </div>
    </div>
  );
});


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style Style without observer. Shouldn't transform: Style without observer. Shouldn't transform 1`] = `

import { useLocal } from 'startupjs'
function Test () {
  return (
    <div style={{ backgroundColor: 'red' }}>
      <div style={{ color: 'green' }} titleStyle={{ color: 'blue' }} />
      <div>
        <span headerStyle={{ color: 'yellow' }}>Hello</span>
      </div>
    </div>
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import { useLocal } from "startupjs";
function Test() {
  return (
    <div
      style={{
        backgroundColor: "red",
      }}
    >
      <div
        style={{
          color: "green",
        }}
        titleStyle={{
          color: "blue",
        }}
      />
      <div>
        <span
          headerStyle={{
            color: "yellow",
          }}
        >
          Hello
        </span>
      </div>
    </div>
  );
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style With ::part() styles: With ::part() styles 1`] = `

import './index.styl'
function Test ({ style, active, submit, disabled, titleStyle }) {
  return (
    <Card style={style} styleName={['root', {active}]} titleStyle={[titleStyle, { color: 'green' }]} title='container'>
      <Content styleName='text' style={{ color: 'red' }} footerStyle={{ color: 'blue' }} center title='text' />
    </Card>
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
function Test({ style, active, submit, disabled, titleStyle }) {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  return (
    <Card
      title="container"
      {..._cssx(
        [
          "root",
          {
            active,
          },
        ],
        _file__css,
        _global,
        _local,
        {
          style: style,
          titleStyle: [
            titleStyle,
            {
              color: "green",
            },
          ],
        }
      )}
    >
      <Content
        center
        title="text"
        {..._cssx("text", _file__css, _global, _local, {
          style: {
            color: "red",
          },
          footerStyle: {
            color: "blue",
          },
        })}
      />
    </Card>
  );
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style dynamic part attribute. Array and Object. Multiple keys.: dynamic part attribute. Array and Object. Multiple keys. 1`] = `

import './index.styl'
const Test = ({ style, layout, cardStyle: myCardStyle, contentStyle, title, ...props }) => {
  function render () {
    return (
      <Card
        part='card'
        style={{ color: 'blue' }}
        titleStyle={{ color: 'red' }}
      >
        <Content part={['content', { row: layout === 'row', column: layout === 'column' }]} />
      </Card>
    )
  }
  return render()
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
const Test = ({
  columnStyle: _columnStyle,
  rowStyle: _rowStyle,
  style,
  layout,
  cardStyle: myCardStyle,
  contentStyle,
  title,
  ...props
}) => {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  function render() {
    return (
      <Card
        {..._cssx("", _file__css, _global, _local, {
          style: [
            {
              color: "blue",
            },
            myCardStyle,
          ],
          titleStyle: {
            color: "red",
          },
        })}
      >
        <Content
          {..._cssx("", _file__css, _global, _local, {
            style: [
              contentStyle,
              layout === "row" ? _rowStyle : undefined,
              layout === "column" ? _columnStyle : undefined,
            ],
          })}
        />
      </Card>
    );
  }
  return render();
};


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style dynamic part attribute. Array and Object: dynamic part attribute. Array and Object 1`] = `

import './index.styl'
const Test = ({ style, cardStyle: myCardStyle, contentStyle, title, ...props }) => {
  function render () {
    return (
      <Card
        part='card'
        style={{ color: 'blue' }}
        titleStyle={{ color: 'red' }}
      >
        <Content part={['content', { active }]} />
      </Card>
    )
  }
  return render()
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
const Test = ({
  activeStyle: _activeStyle,
  style,
  cardStyle: myCardStyle,
  contentStyle,
  title,
  ...props
}) => {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  function render() {
    return (
      <Card
        {..._cssx("", _file__css, _global, _local, {
          style: [
            {
              color: "blue",
            },
            myCardStyle,
          ],
          titleStyle: {
            color: "red",
          },
        })}
      >
        <Content
          {..._cssx("", _file__css, _global, _local, {
            style: [contentStyle, active ? _activeStyle : undefined],
          })}
        />
      </Card>
    );
  }
  return render();
};


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style dynamic part attribute. Object: dynamic part attribute. Object 1`] = `

import './index.styl'
const Test = ({ style, cardStyle: myCardStyle, contentStyle, title, ...props }) => {
  function render () {
    return (
      <Card
        part='card'
        style={{ color: 'blue' }}
        titleStyle={{ color: 'red' }}
      >
        <Content part={{content: true, active}} />
      </Card>
    )
  }
  return render()
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
const Test = ({
  activeStyle: _activeStyle,
  style,
  cardStyle: myCardStyle,
  contentStyle,
  title,
  ...props
}) => {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  function render() {
    return (
      <Card
        {..._cssx("", _file__css, _global, _local, {
          style: [
            {
              color: "blue",
            },
            myCardStyle,
          ],
          titleStyle: {
            color: "red",
          },
        })}
      >
        <Content
          {..._cssx("", _file__css, _global, _local, {
            style: [
              true ? contentStyle : undefined,
              active ? _activeStyle : undefined,
            ],
          })}
        />
      </Card>
    );
  }
  return render();
};


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style dynamic part attribute. Should error on unsupported dynamic key in object: dynamic part attribute. Should error on unsupported dynamic key in object 1`] = `

import './index.styl'
function Test ({ variant }) {
  return (
    <Card part={{[variant]: true}} />
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

SyntaxError: unknown file: 
        'part' attribute only supports literal or string keys in object.
        Dynamic keys or spreads are not supported.
      
  2 | function Test ({ variant }) {
  3 |   return (
> 4 |     <Card part={{[variant]: true}} />
    |                  ^^^^^^^^^^^^^^^
  5 |   )
  6 | }

`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style dynamic part attribute. Should error on unsupported dynamic value in array: dynamic part attribute. Should error on unsupported dynamic value in array 1`] = `

import './index.styl'
function Test ({ variant }) {
  return (
    <Card part={['card', variant]} />
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

SyntaxError: unknown file: 
      'part' attribute only supports static strings or objects inside an array.
    
  2 | function Test ({ variant }) {
  3 |   return (
> 4 |     <Card part={['card', variant]} />
    |                          ^^^^^^^
  5 |   )
  6 | }

`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style dynamic part attribute. Should error on unsupported dynamic value: dynamic part attribute. Should error on unsupported dynamic value 1`] = `

import './index.styl'
function Test ({ variant }) {
  return (
    <Card part={variant} />
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

SyntaxError: unknown file: 
    'part' attribute might only be the following:
      - static string
      - array (with static strings or objects)
      - object (with static keys)
    Basically the rule is that the name of the part must be static so that
    it is possible to determine at compile time which parts are being used.
  
  2 | function Test ({ variant }) {
  3 |   return (
> 4 |     <Card part={variant} />
    |           ^^^^^^^^^^^^^^
  5 |   )
  6 | }

`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style magic 'root' part with existing style prop: magic 'root' part with existing style prop 1`] = `

import './index.styl'
function Test ({ title, style, ...props }) {
  return (
    <Card
      part='root'
      style={{ color: 'blue' }}
      titleStyle={{ color: 'red' }}
    >
      <Content part='content active' />
    </Card>
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
function Test({
  activeStyle: _activeStyle,
  contentStyle: _contentStyle,
  title,
  style,
  ...props
}) {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  return (
    <Card
      {..._cssx("", _file__css, _global, _local, {
        style: [
          {
            color: "blue",
          },
          style,
        ],
        titleStyle: {
          color: "red",
        },
      })}
    >
      <Content
        {..._cssx("", _file__css, _global, _local, {
          style: [_contentStyle, _activeStyle],
        })}
      />
    </Card>
  );
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style magic 'root' part: magic 'root' part 1`] = `

import './index.styl'
function Test ({ title, ...props }) {
  return (
    <Card
      part='root'
      style={{ color: 'blue' }}
      titleStyle={{ color: 'red' }}
    >
      <Content part='content active' />
    </Card>
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
function Test({
  activeStyle: _activeStyle,
  contentStyle: _contentStyle,
  style: _style,
  title,
  ...props
}) {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  return (
    <Card
      {..._cssx("", _file__css, _global, _local, {
        style: [
          {
            color: "blue",
          },
          _style,
        ],
        titleStyle: {
          color: "red",
        },
      })}
    >
      <Content
        {..._cssx("", _file__css, _global, _local, {
          style: [_contentStyle, _activeStyle],
        })}
      />
    </Card>
  );
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style part attribute. No props: part attribute. No props 1`] = `

import './index.styl'
function Test () {
  return (
    <Card
      part='card'
      style={{ color: 'blue' }}
      titleStyle={{ color: 'red' }}
    >
      <Content
        styleName='content'
        part='content active'
        style={{ fontWeight: 'bold' }}
        bodyStyle={{ color: 'blue' }}
      />
    </Card>
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
function Test(_props) {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  return (
    <Card
      {..._cssx("", _file__css, _global, _local, {
        style: [
          {
            color: "blue",
          },
          _props.cardStyle,
        ],
        titleStyle: {
          color: "red",
        },
      })}
    >
      <Content
        {..._cssx("content", _file__css, _global, _local, {
          style: [
            {
              fontWeight: "bold",
            },
            _props.contentStyle,
            _props.activeStyle,
          ],
          bodyStyle: {
            color: "blue",
          },
        })}
      />
    </Card>
  );
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style part attribute. With anon function within named fn: part attribute. With anon function within named fn 1`] = `

import './index.styl'
const Test = ({ style, cardStyle: myCardStyle, contentStyle, title, ...props }) => {
  function render () {
    return (
      <Card
        part='card'
        style={{ color: 'blue' }}
        titleStyle={{ color: 'red' }}
      >
        <Content part='content active' />
      </Card>
    )
  }
  return render()
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
const Test = ({
  activeStyle: _activeStyle,
  style,
  cardStyle: myCardStyle,
  contentStyle,
  title,
  ...props
}) => {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  function render() {
    return (
      <Card
        {..._cssx("", _file__css, _global, _local, {
          style: [
            {
              color: "blue",
            },
            myCardStyle,
          ],
          titleStyle: {
            color: "red",
          },
        })}
      >
        <Content
          {..._cssx("", _file__css, _global, _local, {
            style: [contentStyle, _activeStyle],
          })}
        />
      </Card>
    );
  }
  return render();
};


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style part attribute. With destructed props: part attribute. With destructed props 1`] = `

import './index.styl'
function Test ({ style, cardStyle, title, ...props }) {
  return (
    <Card
      part='card'
      style={{ color: 'blue' }}
      titleStyle={{ color: 'red' }}
    >
      <Content part='content active' />
    </Card>
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
function Test({
  activeStyle: _activeStyle,
  contentStyle: _contentStyle,
  style,
  cardStyle,
  title,
  ...props
}) {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  return (
    <Card
      {..._cssx("", _file__css, _global, _local, {
        style: [
          {
            color: "blue",
          },
          cardStyle,
        ],
        titleStyle: {
          color: "red",
        },
      })}
    >
      <Content
        {..._cssx("", _file__css, _global, _local, {
          style: [_contentStyle, _activeStyle],
        })}
      />
    </Card>
  );
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style part attribute. With named props: part attribute. With named props 1`] = `

import './index.styl'
function Test (props) {
  return (
    <Card
      part='card'
      style={{ color: 'blue' }}
      titleStyle={{ color: 'red' }}
    >
      <Content part='content active' />
    </Card>
  )
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
function Test(props) {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  return (
    <Card
      {..._cssx("", _file__css, _global, _local, {
        style: [
          {
            color: "blue",
          },
          props.cardStyle,
        ],
        titleStyle: {
          color: "red",
        },
      })}
    >
      <Content
        {..._cssx("", _file__css, _global, _local, {
          style: [props.contentStyle, props.activeStyle],
        })}
      />
    </Card>
  );
}


`;

exports[`@startupjs/babel-plugin-rn-stylename-to-style styl function to get style props manually instead of using styleName: styl function to get style props manually instead of using styleName 1`] = `

import './index.styl'
import { styl } from 'startupjs'
const Test = ({ style, active, variant, cardStyle: myCardStyle, contentStyle, title, ...props }) => {
  function render () {
    return (
      <Card
        {...styl(
          ['root', variant],
          {
            style: [myCardStyle, { color: 'blue' }],
            titleStyle: { color: 'red' }
          }
        )}
      >
        <Content {...styl(['content', variant, { active }])} />
      </Card>
    )
  }
  return render()
}

      ↓ ↓ ↓ ↓ ↓ ↓

import _css from "./index.styl";
import {
  runtime as _runtime,
  useCssxLayer as _useCssxLayer,
} from "cssxjs/runtime";
const _cssxLayer = _useCssxLayer;
const _cssx = _runtime;
const Test = ({
  style,
  active,
  variant,
  cardStyle: myCardStyle,
  contentStyle,
  title,
  ...props
}) => {
  const _local = _cssxLayer(
    typeof __CSS_LOCAL__ !== "undefined" && __CSS_LOCAL__
  );
  const _global = _cssxLayer(
    typeof __CSS_GLOBAL__ !== "undefined" && __CSS_GLOBAL__
  );
  const _file__css = _cssxLayer(_css);
  function render() {
    return (
      <Card
        {..._cssx(["root", variant], _file__css, _global, _local, {
          style: [
            myCardStyle,
            {
              color: "blue",
            },
          ],
          titleStyle: {
            color: "red",
          },
        })}
      >
        <Content
          {..._cssx(
            [
              "content",
              variant,
              {
                active,
              },
            ],
            _file__css,
            _global,
            _local,
            {}
          )}
        />
      </Card>
    );
  }
  return render();
};


`;
